--- a/profile.css
+++ b/profile.css
@@ -88,6 +88,27 @@ img {
     top: 120px;
     left: 30px;
 }
+#img1 {
+    width: 200px;
+    height: 150px;
+    position: absolute;
+    top: 120px;
+    left: 350px;
+}
+#img2 {
+    width: 200px;
+    height: 150px;
+    position: absolute;
+    top: 300px;
+    left: 350px;
+}
+#img3 {
+    width: 200px;
+    height: 150px;
+    position: absolute;
+    top: 300px;
+    left: 30px;
+}
 #p1 {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 20px;
