add name, email, subject inputs to contact

--- a/profile.css
+++ b/profile.css
@@ -130,3 +130,33 @@ footer {
     background: #666666;
     text-align: center;
 }
+
+#cname {
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    width: 900px;
+}
+
+#email {
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    width: 900px;
+}
+#subject {
+    position: absolute;
+    top: 250px;
+    left: 20px;
+    width: 900px;
+}
+#cnamelab {
+    position: absolute;
+    top: 110px;
+    left: 20px;
+}
+#emaillab {
+    position: absolute;
+    top: 160px;
+    left: 20px;
+}
