--- a/profile.css
+++ b/profile.css
@@ -109,6 +109,13 @@ img {
     top: 300px;
     left: 30px;
 }
+#img4 {
+    width: 200px;
+    height: 150px;
+    position: absolute;
+    top: 480px;
+    left: 30px;
+}
 #p1 {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 20px;
@@ -123,12 +130,13 @@ img {
     top: 300px;
     left: 30px;
 }
-footer {
+#copyright {
     margin-top: 50px;
     width: 100%;
     height: 50px;
     background: #666666;
-    text-align: center;
+    position: relative;
+    z-index: 1;
 }
 
 #cname {
@@ -167,6 +175,29 @@ footer {
 }
 #submit {
     position: absolute;
-    top: 475px;
+    top: 470px;
     left: 20px;
+}
+
+#portbodywrap {
+    margin-left: 250px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    background: #ffffff;
+    width: 960px;
+    height: 680px;
+    position: relative;
+}
+#bottomline {
+    background: #4aaaa5;
+    padding: 5px;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+}
+#cptext {
+    position: absolute;
+    bottom: 3px;
+    left: 650px;
+    color: white;
 }
