--- a/profile.css
+++ b/profile.css
@@ -128,11 +128,12 @@ img {
     font-size: 20px;
     position: absolute;
     top: 290px;
-    left: 18px;
+    left: 15px;
 }
 #copyright {
+    margin: 0 auto;
     margin-top: 50px;
-    width: 100%;
+    width: 106%;
     height: 50px;
     background: #666666;
     position: relative;
@@ -189,11 +190,12 @@ img {
     position: relative;
 }
 #bottomline {
+    margin: 0 auto;
     background: #4aaaa5;
-    padding: 5px;
     position: absolute;
     z-index: 2;
     width: 100%;
+    height: 10px;
 }
 #cptext {
     position: absolute;
